--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "cors": "^2.8.5",
     "directory-traversal-js": "^0.0.92",
     "firebase": "^9.14.0",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "swiper": "^9.1.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
